<resources>
    <string name="app_name"><b><i>Bird Watching App</i></b></string>
    <string name="title_sighting">Avistamiento</string>
    <string name="sighting">Nuevo Avistamiento</string>
    <string name="action_settings">Ajustes</string>
    <string name="pause">En pausa</string>
    <string name="resume">Resume</string>
    <string name="title_activity_challenges">ChallengesActivity</string>
    <string name="title_challenges">Retos</string>
    <string name="title_activity_login">Login</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="button_login">Acceder</string>
    <string name="button_register">Registrarse</string>
    <string name="register"><u>¿Todavía no tienes una cuenta?  Créate una</u></string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="name_signup">Nombre del usuario</string>
    <string name="signup_password">Contraseña</string>
    <string name="signup_create">Crear cuenta</string>
    <string name="signup_login"><u>Ya estás registrado? Accede aquí</u></string>
    <string name="signup_repeat_password">Reescribe la contraseña</string>
    <string name="element_text">Un avistamiento</string>
    <string name="item_date">Fecha</string>
    <string name="item_bird">Ave avistada</string>
    <string name="titleSightings">Todos los avistamientos</string>
    <string name="titleMySightings">Mis avistamientos</string>
    <string name="titleAchievements">Mis logros</string>
    <string name="item_description">Descripción del reto</string>
    <string name="item_challenge">Reto</string>
    <string name="signup_area">Provincia de CyL</string>
    <string name="create_sighting">Añadir avistamiento</string>
    <string name="sighting_bird">Ave actual: </string>
    <string name="item_achievement">Nombre del logro</string>
    <string name="item_birdSN">Nombre científico: </string>
    <string name="item_birdF">Familia : </string>
    <string name="title_bird">Ave</string>
    <string name="bird_area">Provincias donde vive :</string>
    <string name="bird_season">Temporadas en las que reside aquí :</string>
    <string name="item_birdE">Ecosistema :</string>
    <string name="update_sighting">Actualizar</string>
    <string name="delete_sighting">Borrar</string>
    <string name="goback_sighting">Volver</string>
    <string name="sighting_area">Área</string>
    <string name="sighting_user">usuario</string>
    <string name="sighting_date">Fecha del avistamiento: </string>
    <string name="sighting_area2">Área actual: </string>
    <string name="orderBy">Ordenar Aves por: </string>
    <string name="bird_list">Búsqueda de aves</string>
    <string name="mysightings_list">Mis avistamientos</string>
    <string name="login">Acceder</string>
    <string name="title_signup">¡Regístrate!</string>
    <string name="titleSightingEdit">Editar avistamiento</string>
    <string name="titleSightingCancel">Cancelar</string>
    <string name="newsighting_bird">Ave avistada:</string>
    <string name="title_new_sighting">Nuevo avistamiento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sightings_list">Avistamientos de todos los usuarios</string>
    <string name="new_sighting">Crear un nuevo avistamiento</string>
    <string name="bird_menu">Opciones de búsqueda</string>
    <string name="list_cn">Por nombre común</string>
    <string name="list_sn">Por nombre científico</string>
    <string name="list_areas">Por provincia</string>
    <string name="list_seasons">Por temporada</string>
    <string name="title_le">León</string>
    <string name="title_pa">Palencia</string>
    <string name="title_inv">Invierno</string>
    <string name="title_pri">Primavera</string>
    <string name="title_ver">Verano</string>
    <string name="title_oto">Otoño</string>
    <string name="title_bu">Burgos</string>
    <string name="title_so">Soria</string>
    <string name="title_se">Segovia</string>
    <string name="title_av">Ávila</string>
    <string name="title_sa">Salamanca</string>
    <string name="title_za">Zamora</string>
    <string name="title_va">Valladolid</string>
    <string name="title_settings">Ajustes</string>
    <string name="user_text">Nombre de usuario:</string>
    <string name="item_challenge_description">Descripción</string>
    <string name="delete_user">Borrar usuario</string>

</resources>
