<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewBird"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/cardview_shadow_end_color">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/birdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sighting_bird"
            android:textColor="#000000"
            android:textSize="@dimen/text_big_size"/>


        <TextView
            android:id="@+id/birdSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_birdSN"
            android:textSize="@dimen/text_small_size"
            android:textColor="#000000"
            android:layout_below="@+id/birdName"/>

        <TextView
            android:id="@+id/birdF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/birdName"
            android:layout_alignBottom="@+id/birdName"
            android:layout_alignParentRight="true"
            android:text="@string/item_birdF"
            android:textSize="@dimen/text_small_size"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/birdE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/birdSN"
            android:layout_alignBottom="@+id/birdSN"
            android:layout_alignParentRight="true"
            android:text="@string/item_birdE"
            android:textColor="#000000"
            android:textSize="@dimen/text_small_size"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>
