<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/geese_fondo"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56sp"
        android:paddingLeft="24sp"
        android:paddingRight="24sp">

        <TextView android:id="@+id/title_new_sighting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/sighting"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#000000"/>

        <TextView android:id="@+id/sightingBird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/sighting_bird"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/spinnerBird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="#819FF7"/>

        <TextView android:id="@+id/areaName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/signup_area"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/spinnerArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="#81BEF7"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="24sp"
            android:padding="12sp"
            android:text="@string/create_sighting"
            android:background="#CEECF5"/>


    </LinearLayout>
</ScrollView>
